# solana-security-labs-rust

./: .gitignore  Anchor.toml  README.md
docs/: account-substitution.md  missing-signer-admin.md
programs/account-substitution-lab/: Cargo.toml
programs/account-substitution-lab/src/: lib.rs
programs/missing-signer-admin-lab/: Cargo.toml
programs/missing-signer-admin-lab/src/: lib.rs
tests/: Cargo.toml
tests/src/: account_substitution_attack.rs  lib.rs  missing_signer_admin.rs
