[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.89.0"

[dependencies]
anchor-client = "0.32.1"
account-substitution-lab = { version = "0.1.0", path = "../programs/account-substitution-lab", features = ["no-entrypoint"] }
missing-signer-admin-lab ={ version = "0.1.0", path = "../programs/missing-signer-admin-lab", features = ["no-entrypoint"]}
